<resources>
    <string name="app_name">Degree Planner</string>
    <string name="add_another_course">Add another Course</string>
    <string name="fall">Fall</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="prereq_1">Prereq 1</string>
    <string name="prereq_2">Prereq 2</string>
    <string name="prereq_3">Prereq 3</string>
    <string name="prompt_for_prereqs">Enter all Prereq ID\'s below</string>
    <string name="check_all_semesters">Check all semesters the course is offered in</string>
    <string name="prompt_for_course_id">Enter the Course ID here(ie CSC100)</string>
    <string name="done">done</string>
    <string name="create_courses">Create Courses</string>
    <string name="view_progress">Vew my Progress</string>
    <string name="add_course">Add Course</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="view_schedule">View My Schedule</string>
    <string name="about_app">About the App</string>
    <string name="new_schedule">New Schedule</string>
    <string name="deletes_data_title">Warning! Current schedule will be deleted</string>
    <string name="warning_overwrite">This action will permanently delete your current schedule. This cannot be undone. Are you sure you wish to continue?</string>
    <string name="confirm_delete">Delete all my data and start a new schedule</string>
    <string name="do_not_delete">Go back</string>
    <string name="content_description_launch_icon">Launch Icon for the app</string>
    <string name="content_description_developer">A picture of the developer</string>

    <string name="prompt_select_program">Select your University and Program to get you started</string>
    <string name="university">University:</string>
    <string name="program">Program</string>

    <string name="about_the_development">Development</string>
    <string name="about_open_source">Open Source Contributions</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="see_code">See the source code</string>
    <string name="about_app_string">This app was created to help students plan what semester to take required courses so they complete their degree on time</string>
    <string name="about_developer_string">This app was developed by Russell Waterhouse, A Software Engineering student at the University of Victoria</string>
    <string name="about_code_string">If you are interested in this project, you can look at the source code by pressing the button below!</string>
    <string name="link_to_code">https://github.com/Russell-Waterhouse/course_planner</string>
    <string name="thank_open_source">The developer would like to thank the following Open Source contributions</string>
    <string name="click_links_prompt">Tap on the button to find out more about each contribution that helped make this project possible</string>

    <!--    Open source strings-->
    <string name="android_sdk">The android open source project</string>
    <string name="android_sdk_url">https://source.android.com/</string>
    <string name="room_library">Room Persistence Library</string>
    <string name="room_url">https://developer.android.com/jetpack/androidx/releases/room</string>
    <string name="lifecycle_library">Lifecycle Components</string>
    <string name="lifecycle_library_url">https://developer.android.com/reference/androidx/lifecycle/package-summary.html</string>
    <string name="espresso_library">Espresso Testing Library</string>
    <string name="espresso_url">https://developer.android.com/training/testing/ui-testing/espresso-testing</string>
    <string name="material_library">Material Design Library</string>
    <string name="material_url">https://github.com/material-components/material-components-android</string>


    <string name="tap_course_hint">Tap on a course\nto select it</string>
    <string name="tap_semester_hint">Tap on a semester\n to move the\ncourse there</string>
</resources>
